fixing error